...

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer_name"/>
            <EditText
                android:id="@+id/beer_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            <EditText
                android:id="@+id/notes_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
...
