<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/row_text_size"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/row_text_size"
        android:layout_below="@+id/item_name"/>

    <TextView
        android:id="@+id/item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/row_text_size"
        android:layout_weight="1"
        android:layout_below="@+id/item_type"/>

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/ic_menu_delete"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#555555"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>